--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "country-state-city": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.1",
     "react-toastify": "^10.0.6",
     "react-transition-group": "^4.4.5"
   },
